<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvFinalWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFinalWinner"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvResults"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvYourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvYourScore"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvCompScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvCompScore"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvTieScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvTieScore"
        android:textSize="25dp" />

    <Button
        android:id="@+id/bPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bPlayAgain"
        android:textSize="25dp" />
</LinearLayout>