<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRoundNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvRoundNum"
        android:textSize="50dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvYouChose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvRoundNum"
            android:layout_marginLeft="40dp"
            android:text="@string/tvYouChose"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvCompChose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/tvCompChose"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/ivYouChose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvYouChose"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/ivYouChose"
            android:src="@drawable/rock" />

        <ImageView
            android:id="@+id/ivCompChose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvCompChose"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/ivCompChose"
            android:src="@drawable/scissors" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvWinner"
        android:textSize="25dp" />

    <Button
        android:id="@+id/bNextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bNextRound"
        android:textSize="25dp" />

</LinearLayout>