<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvChoicePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/tvChoicePrompt"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ibRock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rock"
            android:contentDescription="@string/ibRock" />

        <ImageButton
            android:id="@+id/ibPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ibPaper"
            android:src="@drawable/paper" />

        <ImageButton
            android:id="@+id/ibScissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scissors"
            android:contentDescription="@string/ibScissors" />
    </LinearLayout>

</LinearLayout>